# microglia-pruning

./: README.md  pyproject.toml  requirements-frozen.txt  requirements.txt
.jules/: bolt.md
analysis/qwen_adapt_20260506_195958/: bbh_mask_similarity.csv  bbh_task_summary.csv  math_level_summary.csv  summary.json
docs/: advanced_features.md  getting_started.md  latex_supplement.tex  production_deployment.md  reproducibility_report.md
docs/neurips_2026/: draft.tex  main.tex  paper.tex
notebooks/: complete_experiments.ipynb  microglia_pruning_demo.ipynb  qwen3_pruning_eval.ipynb  qwen_adapt_experiment.ipynb  qwen_pruning_eval.ipynb  rigorous_experiment.ipynb
scripts/: ablation_study.py  analyze_qwen_adapt_results.py  benchmark.py  benchmark_suite.py  evaluate.py  interactive_dashboard.py  pareto_explorer.py  reproduce_all.sh  theoretical_analysis.py  train.py  validate_results.py
src/: __init__.py  agent.py  budget.py  inference.py  loss.py  model_registry.py  pareto.py  pruned_attention.py  statistics.py  system.py  theory.py  utils.py
src/rigor/: __init__.py  statistics.py  tracking.py
tests/: test_budget_and_pareto.py  test_inference.py  test_integration_glue.py  test_loss.py  test_rigor_statistics.py  test_rigor_tracking.py  test_smoke_new_modules.py  test_system.py  test_utils_extra.py  test_validation_hardening.py
