[build-system]
requires = ["setuptools==70.0.0", "wheel==0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microglia-pruning"
version = "0.1.0"
description = "Microglia-inspired dynamic attention pruning for reasoning models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Tommaso R. Marena" }
]
dependencies = [
  "torch==2.3.1",
  "transformers==4.42.4",
  "accelerate==0.33.0",
  "bitsandbytes==0.43.1",
  "peft==0.11.1",
  "datasets==2.20.0",
  "scipy==1.13.1",
  "numpy==1.26.4",
  "tqdm==4.66.4",
  "fvcore==0.1.5.post20221221",
  "matplotlib==3.9.0",
  "seaborn==0.13.2",
  "scikit-learn==1.5.1",
  "wandb==0.17.5"
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "black==24.4.2",
  "flake8==7.1.0",
  "mypy==1.10.1"
]

[tool.setuptools]
packages = ["src", "src.rigor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
